desktop version is completed

--- a/index.html
+++ b/index.html
@@ -10,27 +10,33 @@
 <body>
     <div class="container">
         <div class="card card--bright--orange">
-            <img src="icon-sedans.svg" alt="">
+            <div class="general-content">
+                <img src="icon-sedans.svg" alt="">
             <div class="text--content">
                 <h1>SEDANS</h1>
                 <p>chose a sedan fr its affordability and excellent fuel economy. ideal for cursing in the city or your next road trip</p>
-                <a href="#">Learn More</a>
+                <a href="#" class="buttons btn--sedans">Learn More</a>
+            </div>
             </div>
         </div>
         <div class="card card--dark--cyan">
-            <img src="icon-suvs.svg" alt="">
+            <div class="general-content">
+                <img src="icon-suvs.svg" alt="">
             <div class="text--content">
                 <h1>SUVS</h1>
                 <p>chose a sedan fr its affordability and excellent fuel economy. ideal for cursing in the city or your next road trip</p>
-                <a href="#">Learn More</a>
+                <a href="#" class="buttons btn--suvs">Learn More</a>
+            </div>
             </div>
         </div>
         <div class="card card--moredark--cyan">
-            <img src="icon-luxury.svg" alt="">
+            <div class="general-content">
+                <img src="icon-luxury.svg" alt="">
             <div class="text--content">
                 <h1>LUXURY</h1>
                 <p>chose a sedan fr its affordability and excellent fuel economy. ideal for cursing in the city or your next road trip</p>
-                <a href="#">Learn More</a>
+                <a href="#" class="buttons btn--luxury">Learn More</a>
+            </div>
             </div>
         </div>
     </div>
